Update pom.xml
Added access for test?