@@ -120,6 +120,7 @@
                     <argLine>
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
                         --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens org.example.sep_projecta/org.example.sep_projecta=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
